# imlibsetroot

./: .gitignore  Makefile.am  Makefile.in  README.md  aclocal.m4  build  config.h.in  configure  configure.ac  imlibsetroot  imlibsetroot.c  macosx_imlibsetroot  makefile
script/: Makefile.am  Makefile.in  gnome_imlibsetroot  macosx_imlibsetroot  web_imlibsetroot
src/: Makefile.am  Makefile.in
